# Echo_Wojny

./: CMakeLists.txt  Praca_inżynierska.txt  README.md  plan.txt
assets/shaders/: simple.vert
src/: main.cpp
src/Core/: Application.cpp  Application.h  Camera2D.cpp  Camera2D.h  ResourceManager.h
src/Game/: Building.h  Enemy.h  GameState.cpp  GameState.h  Pathfinder.cpp  Pathfinder.h  ResourceNode.h  Villager.cpp  Villager.h  WorldMap.cpp  WorldMap.h
src/Rendering/: Camera2D.cpp  Camera2D.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  Shader.cpp  Shader.h
